package node

sealed interface Expression : ASTNode
