package node

sealed interface Statement : ASTNode
